Make sure context menus don't go offscreen.

--- a/timeline.css
+++ b/timeline.css
@@ -1,40 +1,3 @@
-/*.tl-context-menu {
-	background: #F9F9F9;
-	box-shadow: 0 0 12px rgba( 0, 0, 0, .3 );
-	border: 1px solid #ccc;
-	display: block;
-	position: absolute;
-	top: 0; left: 0;
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	min-width: 100px;
-}
-.tl-context-menu li {
-	position: relative;
-}
-.tl-context-menu li:hover {
-	background: #444;
-}
-.tl-context-menu a {
-	color: #444;
-	display: inline-block;
-	padding-left: 2px;
-	text-decoration: none;
-	width: 85%;
-}
-.tl-context-menu li:hover a {
-	color: #f9f9f9;
-}
-
-ul.menu ul {
-	display: none;
-}
-
-ul.menu li:hover > ul {
-	display: block;
-}*/
-
 .tl-context-menu {
 	box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
 	padding: 0 20px;
@@ -70,6 +33,11 @@ ul.menu li:hover > ul {
 
 .tl-context-menu:after, .tl-context-menu ul:after {
 	content: ""; clear: both; display: block;
+}
+
+.tl-menu-up {
+  top: auto !important;
+  bottom: -1px !important;
 }
 
 .tl-context-menu li {
